<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="motormarket.com.mx.motormarket.Encontrar">

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="regresar"
        android:src="@drawable/bot_sup_encontrar" />

    <ImageView
        android:layout_width="150px"
        android:layout_height="100px"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/imageButton1"
        android:layout_centerHorizontal="true" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap1"
        android:id="@+id/button"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:onClick="btnmap1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap6" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap7"
        android:id="@+id/button7"
        android:layout_below="@+id/button6"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap8"
        android:id="@+id/button8"
        android:layout_below="@+id/button7"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap9"
        android:id="@+id/button9"
        android:layout_below="@+id/button8"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap9" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="40px"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/btnmap10"
        android:id="@+id/button10"
        android:layout_below="@+id/button9"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="btnmap10" />
</RelativeLayout>
