<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo"
    android:layout_height="match_parent"
    tools:context="motormarket.com.mx.motormarket.Trivia">

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="regresar"
        android:src="@drawable/bot_sup_trivia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/triviaPregunta"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:layout_below="@+id/imageButton1"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250px"
        android:layout_height="150px"
        android:id="@+id/imageView2"
        android:src="@drawable/susuki"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/respuesta1"
        android:id="@+id/button"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:onClick="incorrecta" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/respuesta2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="6dp"
        android:onClick="incorrecta" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/respuesta3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="6dp"
        android:onClick="correcta" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:background="#FF1B19"
        android:textColor="#FFFF00"
        android:text="@string/respuesta4"
        android:id="@+id/button4"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="regresar" />


</RelativeLayout>
